--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.game-display {
+  border: 1px solid black;
+  position: relative;
+  width: 300px;
+  height: 500px;
+  margin: auto;
+}
+
+.snake {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: green;
+  left: 100px;
+  bottom: 100px;
+}
+.food {
+  background-color: red;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  transform: scale(0.5); 
+  left: 0;
+  bottom: 0;
+}
+
+.rest-snake {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: green;
+}
+.score-board {
+  position: absolute;
+  width: 50%;
+  top: 0;
+  left: 100%;
+  text-align: center;
+  padding: 10%;
+}
+.score-board p {
+  font-size: 2rem;
 }
